--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -53,14 +53,8 @@ jobs:
         name: programa
     # A file, directory or wildcard pattern that describes what to upload
         path: main
-
-
-  docker:
-    needs: build
-    uses: ./.github/workflows/Docker.yml
-    secrets: inherit
     
-  Deploy_EC2:
+  deploy:
     needs: build
     uses: ./.github/workflows/EC2.yml
     secrets: inherit
